--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -6,6 +6,11 @@ plugins {
 android {
     compileSdk 31
 
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
+    }
+
     defaultConfig {
         applicationId "com.moon.morningismiracle"
         minSdk 21
@@ -34,6 +39,9 @@ android {
 dependencies {
     implementation project(':data')
     implementation project(':domain')
+
+    // material calendarview
+    implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
