--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     // material calendarview
     implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
 
+    // material bottom navigation
+    implementation 'com.google.android.material:material:1.5.0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
