[MIM-21]프로젝트에 Hilt 적용하기
프로젝트에 Hilt를 적용한다.
Room 객체 생성을 위한 Module을 구현한다.
coroutine scope 제공을 위한 Module을 구현한다.

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
+    // hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
+
 //    // Lifecycle components
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
 //    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
