--- a/data/build.gradle
+++ b/data/build.gradle
@@ -39,8 +39,12 @@ android {
 dependencies {
     implementation project(':domain')
 
+    // coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
     // Room components
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+    api "androidx.room:room-runtime:2.4.2"
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
