--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     compileSdk 31
 
@@ -19,6 +22,11 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "ADMOB_API_APPLICATION_KEY", properties['adMobApplicationID']
+        buildConfigField "String", "ADMOB_API_BANNER_KEY", properties['adMobBannerID']
+        resValue "string", "ADMOB_API_APPLICATION_KEY", properties['adMobApplicationID']
+        resValue "string", "ADMOB_API_BANNER_KEY", properties['adMobBannerID']
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -69,6 +77,9 @@ dependencies {
     // data store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+
+    // adMob
+    implementation 'com.google.android.gms:play-services-ads:20.6.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
